fix unintended java 1.5 dependency
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@602117 13f79535-47bb-0310-9956-ffa450edef68